simple/test/features/errors/control_flow/e1103_return_outside_function.spl
# E1103: Return Outside Function

Feature: E1103 - Return Can Only Be Used Inside a Function
  As a Simple compiler
  I want to detect return statements outside functions
  So that return is only used in valid contexts

  Background:
    Given I have the Simple compiler

  Scenario: Return at module level
    When I compile:
      '''
      val x = 42
      return x  # Error: not in a function
      '''
    Then I should see error E1103 at line 2
    And the error message should be "`return` can only be used inside a function"
    And the label should indicate "not in a function"
    And the help should suggest "use `return` inside function bodies"

  Scenario: Valid return in function
    When I compile:
      '''
      fn get_value() -> i32:
        return 42  # OK: inside function
      '''
    Then compilation should succeed

  Scenario: Implicit return
    When I compile:
      '''
      fn get_value() -> i32:
        42  # OK: implicit return
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      return 42
      '''
    Then I should see error E1103
    And the error message should contain "함수 외부의 return"
